# simweb

./: .gitignore  .tool-versions  LICENSE  README.md  pyproject.toml
experiments/: compute_clock.py  dashboard.html  dashboard.py  experiment_cpu.py  experiment_rate.py  experiment_rate_cpu_async.py  experiment_rate_cpu_sync.py  experiment_runtime.py  heatmap.yaml  lines.yaml  report_cpu.html  report_rate.html  report_runtime.html
simweb/: __init__.py  entities.py  experiment.py  files.py  metrics.py  report.py  samplers.py  simulation.py
